--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <body>
         <h2>This is HTML Page</h2>
         <p>Learning for feature-branch</p>
+        <pre>
+            Changes Maded
+        </pre>
     </body>
 </html>
